--- a/DTShareKitDemo/DTKitDemo/Info.plist
+++ b/DTShareKitDemo/DTKitDemo/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>自动打卡</string>
+	<string>钉钉打卡</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
